--- a/res/layout/top_progress_bar.xml
+++ b/res/layout/top_progress_bar.xml
@@ -7,7 +7,7 @@
         android:layout_height="4dp"
         android:padding="0dp"
         android:layout_margin="0dp"
-        android:layout_alignParentTop="true"
+        android:layout_gravity="top"
         style="@style/Widget.ownCloud.TopProgressBar"
         android:indeterminate="false"
         android:indeterminateOnly="false"
