--- a/res/layout/dialog_document_scan_result.xml
+++ b/res/layout/dialog_document_scan_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <uk.co.senab.photoview.PhotoView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/cropped_document_image_view"
         android:background="@color/grey"
         android:layout_width="match_parent"
