--- a/sample_client/res/layout/main.xml
+++ b/sample_client/res/layout/main.xml
@@ -22,26 +22,27 @@
    THE SOFTWARE.
 
  -->
- 
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
     >
 
-    <Button
-        android:id="@+id/button_refresh"
-        style="@style/ButtonStyle"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+    <EditText
+        android:id="@+id/server_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:enabled="false"
-        android:onClick="onClickHandler"
-        android:text="@string/refresh"
-        android:visibility="invisible"/>
+        android:layout_toLeftOf="@+id/button_check_server"
+        android:layout_toStartOf="@+id/button_check_server"
+        android:ems="10"
+        android:hint="Server address (with http or https)"
+        android:inputType="textPersonName"/>
 
     <Button
         android:id="@+id/button_check_server"
-        style="@style/ButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/server_address"
@@ -51,105 +52,103 @@
         android:onClick="onClickHandler"
         android:text="@string/check_server"/>
 
+    <Button
+        android:id="@+id/button_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/server_address"
+        android:layout_marginTop="10dp"
+        android:onClick="onClickHandler"
+        android:text="@string/refresh"
+        android:visibility="visible"/>
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button_upload"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/button_refresh"
         android:visibility="invisible">
     </ListView>
 
-    <Button
-        android:id="@+id/button_upload"
-        style="@style/ButtonStyle"
-        android:layout_above="@+id/frame"
-        android:layout_alignParentLeft="true"
-        android:enabled="false"
-        android:onClick="onClickHandler"
-        android:text="@string/upload"
-        android:visibility="invisible"/>
+    <!--<Button-->
+    <!--android:id="@+id/button_upload"-->
+    <!--style="@style/ButtonStyle"-->
+    <!--android:layout_above="@+id/frame"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:enabled="false"-->
+    <!--android:onClick="onClickHandler"-->
+    <!--android:text="@string/upload"-->
+    <!--android:visibility="invisible"/>-->
 
-    <TextView
-        android:id="@+id/upload_progress"
-        style="@style/ProgressStyle"
-        android:layout_above="@id/frame"
-        android:layout_below="@id/list_view"
-        android:layout_toLeftOf="@+id/button_delete_remote"
-        android:layout_toRightOf="@id/button_upload"
-        android:enabled="false"
-        android:gravity="center"
-        android:text="0%"
-        android:textSize="14sp"
-        android:visibility="invisible"/>
+    <!--<TextView-->
+    <!--android:id="@+id/upload_progress"-->
+    <!--style="@style/ProgressStyle"-->
+    <!--android:layout_above="@id/frame"-->
+    <!--android:layout_below="@id/list_view"-->
+    <!--android:layout_toLeftOf="@+id/button_delete_remote"-->
+    <!--android:layout_toRightOf="@id/button_upload"-->
+    <!--android:enabled="false"-->
+    <!--android:gravity="center"-->
+    <!--android:text="0%"-->
+    <!--android:textSize="14sp"-->
+    <!--android:visibility="invisible"/>-->
 
-    <Button
-        android:id="@id/button_delete_remote"
-        style="@style/ButtonStyle"
-        android:layout_above="@id/frame"
-        android:layout_alignParentRight="true"
-        android:enabled="false"
-        android:onClick="onClickHandler"
-        android:text="@string/delete_remote_file"
-        android:visibility="invisible"/>
+    <!--<Button-->
+    <!--android:id="@id/button_delete_remote"-->
+    <!--style="@style/ButtonStyle"-->
+    <!--android:layout_above="@id/frame"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:enabled="false"-->
+    <!--android:onClick="onClickHandler"-->
+    <!--android:text="@string/delete_remote_file"-->
+    <!--android:visibility="invisible"/>-->
 
-    <FrameLayout
-        android:id="@id/frame"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/frame_height"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_above="@+id/button_download"
-        >
-    </FrameLayout>
+    <!--<FrameLayout-->
+    <!--android:id="@id/frame"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="@dimen/frame_height"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_above="@+id/button_download"-->
+    <!--&gt;-->
+    <!--</FrameLayout>-->
 
-    <Button
-        android:id="@id/button_download"
-        style="@style/ButtonStyle"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:enabled="false"
-        android:onClick="onClickHandler"
-        android:text="@string/download"
-        android:visibility="invisible"/>
+    <!--<Button-->
+    <!--android:id="@id/button_download"-->
+    <!--style="@style/ButtonStyle"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:enabled="false"-->
+    <!--android:onClick="onClickHandler"-->
+    <!--android:text="@string/download"-->
+    <!--android:visibility="invisible"/>-->
 
-    <TextView
-        android:id="@+id/download_progress"
-        style="@style/ProgressStyle"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@id/frame"
-        android:layout_toLeftOf="@+id/button_delete_local"
-        android:layout_toRightOf="@id/button_download"
-        android:enabled="false"
-        android:gravity="center"
-        android:text="0%"
-        android:textSize="14sp"
-        android:visibility="invisible"/>
+    <!--<TextView-->
+    <!--android:id="@+id/download_progress"-->
+    <!--style="@style/ProgressStyle"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_below="@id/frame"-->
+    <!--android:layout_toLeftOf="@+id/button_delete_local"-->
+    <!--android:layout_toRightOf="@id/button_download"-->
+    <!--android:enabled="false"-->
+    <!--android:gravity="center"-->
+    <!--android:text="0%"-->
+    <!--android:textSize="14sp"-->
+    <!--android:visibility="invisible"/>-->
 
-    <Button
-        android:id="@id/button_delete_local"
-        style="@style/ButtonStyle"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:enabled="false"
-        android:onClick="onClickHandler"
-        android:text="@string/delete_local_file"
-        android:visibility="invisible"/>
-
-    <EditText
-        android:id="@+id/server_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/list_view"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/button_check_server"
-        android:layout_toStartOf="@+id/button_check_server"
-        android:ems="10"
-        android:hint="Server address (with http or https)"
-        android:inputType="textPersonName"/>
+    <!--<Button-->
+    <!--android:id="@id/button_delete_local"-->
+    <!--style="@style/ButtonStyle"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:enabled="false"-->
+    <!--android:onClick="onClickHandler"-->
+    <!--android:text="@string/delete_local_file"-->
+    <!--android:visibility="invisible"/>-->
 
 </RelativeLayout>
 
