Test remote deletion

--- a/sample_client/res/layout/main.xml
+++ b/sample_client/res/layout/main.xml
@@ -83,13 +83,15 @@
         android:onClick="onClickHandler"
         android:text="@string/download"/>
 
-    <!--<Button-->
-    <!--android:id="@+id/button_delete_remote"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentLeft="true"-->
-    <!--android:onClick="onClickHandler"-->
-    <!--android:text="@string/delete_remote_file"/>-->
+    <Button
+        android:id="@+id/button_delete_remote"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/button_download"
+        android:layout_marginTop="10dp"
+        android:onClick="onClickHandler"
+        android:text="@string/delete_remote_file"/>
 
     <!--<ListView-->
     <!--android:id="@+id/list_view"-->
