Fix quota shows a not resolved template string if no quota yet detected

--- a/res/layout/drawer.xml
+++ b/res/layout/drawer.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/account_quota_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/drawer_quota"/>
+                android:text="@string/drawer_loading_quota"/>
 
         </LinearLayout>
 
