fix problem with quota and scrolling

--- a/res/menu/drawer_menu.xml
+++ b/res/menu/drawer_menu.xml
@@ -17,6 +17,41 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!--
+        account list placeholder
+        all items in this group MUST have orderInCategory="2" set
+        all accounts are dynamically added with orderInCategory="1" set
+    -->
+    <group android:id="@+id/drawer_menu_accounts">
+        <item
+            android:orderInCategory="2"
+            android:id="@+id/drawer_menu_account_add"
+            android:icon="@drawable/ic_plus_grey"
+            android:title="@string/prefs_add_account"/>
+        <item
+            android:orderInCategory="2"
+            android:id="@+id/drawer_menu_account_manage"
+            android:icon="@drawable/ic_account_multiple_grey"
+            android:title="@string/drawer_manage_accounts"/>
+
+        <item
+            android:id="@+id/footer_spacer_3"
+            android:checkable="false"
+            android:enabled="false"
+            android:orderInCategory="200"
+            android:title="" />
+
+        <item
+            android:id="@+id/footer_spacer_4"
+            android:checkable="false"
+            android:enabled="false"
+            android:orderInCategory="200"
+            android:title="" />
+
+    </group>
+
+
     <!--
       standard menu
       all items in this group MUST have orderInCategory="0" set
@@ -50,23 +85,20 @@
             android:id="@+id/drawer_menu_help"
             android:icon="@drawable/ic_help_circle_grey"
             android:title="@string/drawer_help"/>
+
+        <item
+            android:id="@+id/footer_spacer_1"
+            android:checkable="false"
+            android:enabled="false"
+            android:orderInCategory="200"
+            android:title="" />
+
+        <item
+            android:id="@+id/footer_spacer_2"
+            android:checkable="false"
+            android:enabled="false"
+            android:orderInCategory="200"
+            android:title="" />
     </group>
 
-    <!--
-      account list placeholder
-      all items in this group MUST have orderInCategory="2" set
-      all accounts are dynamically added with orderInCategory="1" set
-    -->
-    <group android:id="@+id/drawer_menu_accounts">
-        <item
-            android:orderInCategory="2"
-            android:id="@+id/drawer_menu_account_add"
-            android:icon="@drawable/ic_plus_grey"
-            android:title="@string/prefs_add_account"/>
-        <item
-            android:orderInCategory="2"
-            android:id="@+id/drawer_menu_account_manage"
-            android:icon="@drawable/ic_account_multiple_grey"
-            android:title="@string/drawer_manage_accounts"/>
-    </group>
 </menu>
