--- a/res/layout-land/drawer.xml
+++ b/res/layout-land/drawer.xml
@@ -29,6 +29,30 @@
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/drawer_menu">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="@dimen/standard_padding"
+            android:orientation="vertical"
+            android:background="@color/white">
+
+            <ProgressBar
+                android:id="@+id/account_quota_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:progress="25"
+                android:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/account_quota_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/drawer_quota"/>
+
+        </LinearLayout>
+
     </android.support.design.widget.NavigationView>
 
 </merge>
