--- a/res/layout-sw720dp-land/drawer.xml
+++ b/res/layout-sw720dp-land/drawer.xml
@@ -32,11 +32,36 @@
         <ImageView
             android:id="@+id/drawer_cloud"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="220dp"
             android:src="@drawable/transparent_cloud"
             android:scaleType="centerInside"
             android:layout_gravity="bottom"
-            android:layout_margin="@dimen/standard_margin"/>
+            android:layout_margin="@dimen/standard_margin"
+            android:paddingBottom="70dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="@dimen/standard_padding"
+            android:orientation="vertical"
+            android:background="@color/white">
+
+            <ProgressBar
+                android:id="@+id/account_quota_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:progress="25"
+                android:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/account_quota_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/drawer_quota"/>
+
+        </LinearLayout>
 
     </android.support.design.widget.NavigationView>
 
