--- a/res/layout/grid_item.xml
+++ b/res/layout/grid_item.xml
@@ -50,11 +50,11 @@
 
         <ImageView
             android:id="@+id/localFileIndicator"
-            android:layout_width="@dimen/file_icon_size"
-            android:layout_height="@dimen/file_icon_size"
+            android:layout_width="@dimen/file_indicator_pin_size_grid"
+            android:layout_height="@dimen/file_indicator_pin_size_grid"
             android:layout_gravity="bottom|right"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginRight="12dp"
             android:src="@drawable/sync_pin" />
 
         <ImageView
