--- a/res/values/dims.xml
+++ b/res/values/dims.xml
@@ -32,6 +32,8 @@
     <dimen name="nav_drawer_menu_avatar_radius">12sp</dimen>
     <dimen name="list_item_avatar_icon_radius">20dp</dimen>
 
+    <dimen name="file_indicator_pin_size">12dp</dimen>
+    <dimen name="file_indicator_pin_size_grid">18dp</dimen>
     <dimen name="file_icon_size">32dp</dimen>
     <dimen name="file_icon_size_grid">128dp</dimen>
     <dimen name="file_avatar_size">128dp</dimen>
