--- a/res/layout-h720dp/drawer.xml
+++ b/res/layout-h720dp/drawer.xml
@@ -24,18 +24,29 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
         android:filterTouchesWhenObscured="true"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/drawer_menu">
+
+        <ImageView
+            android:id="@+id/drawer_cloud"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:src="@drawable/drawer_logo"
+            android:scaleType="centerInside"
+            android:layout_gravity="bottom"
+            android:layout_margin="@dimen/standard_margin"
+            android:paddingBottom="70dp"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:padding="@dimen/standard_padding"
+            android:background="@color/white"
             android:orientation="vertical"
-            android:background="@color/white">
+            android:padding="@dimen/standard_padding">
 
             <ProgressBar
                 android:id="@+id/account_quota_bar"
@@ -43,13 +54,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:progress="25"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/account_quota_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/drawer_quota"/>
+                android:text="@string/drawer_loading_quota" />
 
         </LinearLayout>
 
