--- a/res/menu/file_actions_menu.xml
+++ b/res/menu/file_actions_menu.xml
@@ -25,8 +25,8 @@
         android:title="@string/actionbar_select_all"
         android:showAsAction="never"/>
 
-    <item android:id="@+id/action_deselect_all"
-        android:title="@string/actionbar_deselect_all"
+    <item android:id="@+id/action_select_inverse"
+        android:title="@string/actionbar_select_inverse"
         android:visible="true"
         android:showAsAction="never"/>
 
