Handle non existing drawer header background

--- a/res/layout/drawer_header.xml
+++ b/res/layout/drawer_header.xml
@@ -24,10 +24,10 @@
     android:background="@color/drawer_header_color">
 
     <ImageView
+        android:id="@+id/drawer_header_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/drawer_header_background"/>
+        android:scaleType="centerCrop"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
