--- a/res/layout/top_progress_bar.xml
+++ b/res/layout/top_progress_bar.xml
@@ -14,4 +14,14 @@
         android:visibility="visible"
         />
 
+    <View
+        android:id="@+id/shadow_view"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/shadow_gradient"
+        android:visibility="gone"
+        android:padding="0dp"
+        android:layout_margin="0dp"
+        android:layout_gravity="top"/>
+
 </merge>
