--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -21,11 +21,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_search"
+        android:title="@string/actionbar_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/action_select_all"
         android:title="@string/actionbar_select_all"
         android:orderInCategory="1"
         android:visible="false"/>
-
     <item
         android:id="@+id/action_create_dir"
         android:icon="@drawable/ic_action_create_dir"
