--- a/res/layout-land/account_setup.xml
+++ b/res/layout-land/account_setup.xml
@@ -118,6 +118,18 @@
                         </EditText>
 
                         <ImageButton
+                            android:id="@+id/embeddedCheckServerButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical|right"
+                            android:layout_marginRight="5dp"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="@string/auth_refresh_button"
+                            android:padding="0dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_arrow_right"/>
+
+                        <ImageButton
                             android:id="@+id/embeddedRefreshButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -128,8 +140,7 @@
                             android:padding="0dp"
                             android:scaleType="fitCenter"
                             android:src="@drawable/ic_action_refresh"
-                            android:visibility="gone"
-                            />
+                            android:visibility="gone" />
                     </FrameLayout>
 
                     <TextView
@@ -195,7 +206,7 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatButton
-                android:id="@+id/buttonOK"
+                android:id="@+id/loginButton"
                 android:layout_width="400dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
