--- a/res/layout/account_setup.xml
+++ b/res/layout/account_setup.xml
@@ -100,6 +100,18 @@
                 </EditText>
 
                 <ImageButton
+                    android:id="@+id/embeddedCheckServerButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="5dp"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/auth_refresh_button"
+                    android:padding="0dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_arrow_right"/>
+
+                <ImageButton
                     android:id="@+id/embeddedRefreshButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -164,7 +176,7 @@
                 android:visibility="gone"/>
 
             <android.support.v7.widget.AppCompatButton
-                android:id="@+id/buttonOK"
+                android:id="@+id/loginButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
