--- a/res/layout-land/account_setup.xml
+++ b/res/layout-land/account_setup.xml
@@ -18,10 +18,10 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<FrameLayout
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/login_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/login_background_image"
@@ -40,7 +40,6 @@
         >
 
         <LinearLayout
-            android:id="@+id/login_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_block"
@@ -140,7 +139,8 @@
                             android:padding="0dp"
                             android:scaleType="fitCenter"
                             android:src="@drawable/ic_action_refresh"
-                            android:visibility="gone" />
+                            android:visibility="gone"
+                            />
                     </FrameLayout>
 
                     <TextView
