--- a/res/layout/files_folder_picker.xml
+++ b/res/layout/files_folder_picker.xml
@@ -40,7 +40,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/common_cancel"
+            android:text="@android:string/cancel"
             android:theme="@style/Button.Secondary" />
 
         <ImageButton
