--- a/owncloudApp/src/main/res/layout/file_details_fragment.xml
+++ b/owncloudApp/src/main/res/layout/file_details_fragment.xml
@@ -26,6 +26,7 @@
     >
 
     <RelativeLayout
+        android:id="@+id/fileDetailsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
