[ft] add remove file on source when uploading items
see issue 601.

--- a/owncloudApp/src/main/res/layout/upload_files_layout.xml
+++ b/owncloudApp/src/main/res/layout/upload_files_layout.xml
@@ -74,6 +74,13 @@
                 android:id="@+id/upload_radio_move"
                 android:paddingRight="8dp"
                 android:checked="false" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/upload_remove_files"
+                android:id="@+id/upload_radio_remove"
+                android:paddingRight="8dp"
+                android:checked="false" />
         </RadioGroup>
     </LinearLayout>
 
