--- a/owncloudApp/src/main/res/layout/edit_share_layout.xml
+++ b/owncloudApp/src/main/res/layout/edit_share_layout.xml
@@ -22,7 +22,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.owncloud.android.ui.fragment.EditShareFragment"
+    tools:context="com.owncloud.android.shares.presentation.fragment.EditShareFragment"
     android:id="@+id/shareScroll"
     >
 
